2005-03-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-mozilla-viewer.c: (cb_data):
	  Implement play, pause, stop.

2005-03-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	  link totem-mozilla-* against baconconnection.
	* src/bacon-message-connection.c: (setup_connection), (server_cb),
	(try_server), (try_client), (bacon_message_connection_new),
	(bacon_message_connection_free),
	(bacon_message_connection_set_callback),
	(bacon_message_connection_send),
	(bacon_message_connection_get_is_server):
	  Update for two-way communication.
	* src/bacon-message-connection.h:
	* src/totem-mozilla-plugin.cpp:
	* src/totem-mozilla-scriptable.cpp:
	* src/totem-mozilla-scriptable.h:
	* src/totem-mozilla-viewer.c: (cb_data), (main):
	  Set up basic push-response model. Idea: plugin gets a function
	  call from mozilla, pushes as message to child, does action, waits,
	  responds, puts message back, mozilla-plugin reads and returns
	  error/ok to mozilla. Works nicely.

2005-03-23  Bastien Nocera  <hadess@hadess.net>

	* src/backend/.cvsignore:
	* src/plparse/.cvsignore: added

2005-03-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	* src/Makefile.am:
	* src/backend/Makefile.am:
	* src/plparse/Makefile.am:
	  Move baconvideowidget and plparser to their own subdirectory.
	* src/bacon-resize.c:
	* src/bacon-resize.h:
	* src/bacon-video-widget-gst.c:
	* src/bacon-video-widget-xine.c:
	* src/bacon-video-widget.h:
	* src/bvw-test.c:
	* src/debug.h:
	* src/gstscreenshot.c:
	* src/gstscreenshot.h:
	* src/test-parser.c:
	* src/totem-disc.c:
	* src/totem-disc.h:
	* src/totem-pl-parser.c:
	* src/totem-pl-parser.h:
	* src/totemplparser-marshal.list:
	* src/video-utils.c:
	* src/video-utils.h:
	  Remove old files.

2005-03-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (on_movie_menu_select): use the program-wide
	monitor, instead of a local one
	* src/totem.c: (main): simple style change
