@@ -1,3 +1,9 @@
+2005-03-23  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-mozilla-viewer.c: (totem_embedded_pause),
+	(on_play_pause), (cb_data): set the states properly after having
+	received a remote message
+
 2005-03-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/totem-mozilla-viewer.c: (cb_data):
